# Agent-AI-Bot

./: .gitignore
.github/workflows/: ci.yml
my-agent/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  agent.py  bot.py  config.py  docker-compose.yml  exceptions.py  llm_provider.py  logging_config.py  pyproject.toml  requirements.txt  settings.py
my-agent/config/: config.json
my-agent/handlers/: __init__.py  commands.py  messages.py
my-agent/memory/: __init__.py  store.py
my-agent/safety/: __init__.py  safe_eval.py  secrets_redactor.py  ssrf_guard.py
my-agent/tests/: conftest.py  test_calculator_tool.py  test_rate_limiter.py  test_response_sanitizer.py  test_safe_eval.py  test_secrets_redactor.py  test_ssrf_guard.py  test_video_tool.py
my-agent/tools/: __init__.py  github.py  pdf_builder.py  search.py  url.py  utilities.py  video.py  youtube_pdf.py
my-agent/utils/: __init__.py  async_utils.py  formatting.py  rate_limiter.py  response_sanitizer.py
